[package]
edition = { workspace = true }
homepage = { workspace = true }
include = { workspace = true }
license = { workspace = true }
name = "froglight-brigadier"
readme = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

# --- Dependencies ---

[dev-dependencies]
bevy = { features = ["bevy_log"], workspace = true }

[dependencies]
bevy_app = { features = ["bevy_reflect", "reflect_functions"], workspace = true }
bevy_ecs = { features = ["bevy_reflect", "reflect_functions"], workspace = true }
bevy_reflect = { features = ["functions"], workspace = true }
foldhash = { workspace = true }
froglight-common = { workspace = true }
glam = { workspace = true }
indexmap = { workspace = true }
lexical = { features = ["format", "parse"], workspace = true }
variadics_please = { workspace = true }

# Optional dependencies
libm = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
uuid = { workspace = true, optional = true }

# --- Features ---

[features]
default = ["std"]

# Enable `tracing` support.
tracing = ["dep:tracing"]
# Enable `uuid` support.
uuid = ["dep:uuid", "bevy_reflect/uuid"]

# Enable `libm` for `no_std` support.
libm = ["dep:libm", "glam/nostd-libm"]

# Enable support for the standard library
std = ["bevy_app/std", "bevy_ecs/std", "bevy_reflect/std", "froglight-common/std", "glam/std", "indexmap/std", "lexical/std", "uuid?/std"]
# Enable optimizations using the nightly toolchain
nightly = ["froglight-common/nightly"]
