[package]
edition = { workspace = true }
homepage = { workspace = true }
include = { workspace = true }
license = { workspace = true }
name = "froglight-codegen"
readme = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }

[lints]
workspace = true

# --- Dependencies ---

[dependencies]
async_zip = { features = ["full", "tokio"], version = "0.0.18" }
cafebabe = { features = ["threadsafe"], version = "0.9" }
chrono = { features = ["clock", "std"], version = "0.4"}
convert_case = { version = "=0.10" }
facet = { features = ["chrono", "helpful-derive", "std"], workspace = true }
facet-json = { features = ["std", "tokio"], workspace = true }
facet-toml = { features = ["std"], workspace = true }
facet-value = { features = ["std"], workspace = true }
indexmap = { features = ["std"], workspace = true }
miette = { features = ["fancy"], version = "7.6" }
papaya = { version = "0.2" }
reqwest = { features = ["rustls"], workspace = true }
tokio = { features = ["full"], workspace = true }
tracing = { workspace = true }
tracing-subscriber = { features = ["env-filter"], workspace = true }
