[package]
edition = { workspace = true }
homepage = { workspace = true }
include = { workspace = true }
license = { workspace = true }
name = "froglight-common"
readme = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

# --- Dependencies ---

[dependencies]
uuid = { workspace = true }

# Optional dependencies
bevy_app = { features = ["bevy_reflect"], workspace = true, optional = true }
bevy_ecs = { features = ["bevy_reflect"], workspace = true, optional = true }
bevy_reflect = { features = ["uuid"], workspace = true, optional = true }
facet = { features = ["uuid"], workspace = true, optional = true }
hashbrown = { features = ["alloc", "core", "default-hasher"], workspace = true, optional = true }
serde = { features = ["derive"], workspace = true, optional = true }
tracing = { workspace = true, optional = true }

# --- Features ---

[features]
default = ["alloc", "std"]

# Enable `bevy` support.
bevy = ["alloc", "dep:bevy_app", "dep:bevy_ecs", "dep:bevy_reflect", "dep:hashbrown", "serde"]
# Enable `facet` support.
facet = ["dep:facet"]
# Enable `serde` support.
serde = ["dep:serde", "uuid/serde"]
# Enable `tracing` support.
tracing = ["dep:tracing"]

# Enable support for a global allocator
alloc = []
# Enable support for the standard library
std = ["alloc", "bevy_app?/std", "bevy_ecs?/std", "bevy_reflect?/std", "uuid/std"]
# Enable optimizations using the nightly toolchain
nightly = []
