[package]
edition = { workspace = true }
homepage = { workspace = true }
include = { workspace = true }
license = { workspace = true }
name = "froglight-common"
readme = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

# --- Dependencies ---

[dependencies]
bevy_app = { features = ["bevy_reflect"], workspace = true, optional = true }
bevy_ecs = { features = ["bevy_reflect"], workspace = true, optional = true }
bevy_reflect = { features = ["uuid"], workspace = true, optional = true }
facet = { features = ["uuid"], workspace = true, optional = true }
glam = { workspace = true, optional = true }
hashbrown = { features = ["core", "default-hasher", "inline-more"], workspace = true, optional = true }
libm = { workspace = true, optional = true }
serde = { features = ["derive"], workspace = true, optional = true }
tracing = { workspace = true, optional = true }
uuid = { workspace = true, optional = true }

# --- Features ---

[features]
default = ["alloc", "std"]

# Enable `UUID`s.
aabb = ["dep:glam", "bevy_reflect?/glam"]
# Enable `AABB`s.
uuid = ["dep:uuid"]

# Enable `bevy` support.
bevy = ["alloc", "dep:bevy_app", "dep:bevy_ecs", "dep:bevy_reflect", "dep:hashbrown", "serde", "uuid"]
# Enable `facet` support.
facet = ["dep:facet"]
# Enable `serde` support.
serde = ["dep:serde", "glam?/serde", "hashbrown?/serde", "uuid?/serde"]
# Enable `tracing` support.
tracing = ["dep:tracing"]

# Enable `libm` for `no_std` support.
libm = ["dep:libm", "glam?/nostd-libm"]

# Enable support for a global allocator
alloc = ["facet?/alloc", "hashbrown?/alloc"]
# Enable support for the standard library
std = ["alloc", "bevy_app?/std", "bevy_ecs?/std", "bevy_reflect?/std", "facet?/std", "glam?/std", "uuid?/std"]
# Enable optimizations using the nightly toolchain
nightly = ["hashbrown?/nightly", "glam?/core-simd"]

# -------------------------------------------------------------------------------------------------
# Note: The following features are automatically @generated.

v26_1 = []
v26_2 = []
