[package]
edition = { workspace = true }
homepage = { workspace = true }
include = { workspace = true }
license = { workspace = true }
name = "froglight-common"
readme = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

# --- Dependencies ---

[dependencies]
bevy_reflect = { workspace = true, optional = true }
facet = { features = ["alloc"], workspace = true, optional = true }
froglight-facet = { workspace = true, optional = true }
serde = { features = ["alloc", "derive"], workspace = true, optional = true }

# --- Features ---

[features]
default = ["std"]

# Enable `bevy` support.
bevy = ["dep:bevy_reflect", "serde"]
# Enable `facet` support.
facet = ["dep:facet", "dep:froglight-facet"]
# Enable `serde` support.
serde = ["dep:serde"]

# Enable support for the standard library
std = ["bevy_reflect?/std", "facet?/std", "froglight-facet?/std"]
# Enable optimizations using the nightly toolchain
nightly = ["froglight-facet?/nightly"]

# -------------------------------------------------------------------------------------------------
# Note: The following features are automatically @generated.

v26_1 = []
v26_2 = []
