[package]
edition = { workspace = true }
homepage = { workspace = true }
include = { workspace = true }
license = { workspace = true }
name = "froglight-entity"
readme = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

# --- Dependencies ---

[dependencies]
froglight-common = { workspace = true }
froglight-player = { workspace = true }
glam = { workspace = true }
uuid = { workspace = true }

# Optional dependencies
arc-swap = { workspace = true, optional = true }
bevy_app = { features = ["bevy_reflect"], workspace = true, optional = true }
bevy_ecs = { features = ["bevy_reflect"], workspace = true, optional = true }
bevy_math = { features = ["alloc", "bevy_reflect"], workspace = true, optional = true }
bevy_reflect = { features = ["uuid"], workspace = true, optional = true }
facet = { features = ["alloc", "uuid"], workspace = true, optional = true }
froglight-facet = { workspace = true, optional = true }
serde = { features = ["alloc", "derive"], workspace = true, optional = true }
tracing = { workspace = true, optional = true }

# --- Features ---

[features]
default = ["std"]

# Enable support for atomics
atomic = []
# Enable `bevy` support.
bevy = ["dep:bevy_app", "dep:bevy_ecs", "dep:bevy_math", "dep:bevy_reflect", "froglight-common/bevy", "froglight-player/bevy", "serde"]
# Enable `facet` support.
facet = ["dep:facet", "froglight-common/facet", "dep:froglight-facet", "froglight-player/facet"]
# Enable `serde` support.
serde = ["dep:serde"]
# Enable `tracing` support.
tracing = ["dep:tracing", "froglight-player/tracing"]
# Enable extended `tracing` support.
tracing_ext = ["froglight-facet?/tracing", "tracing"]

# Enable `libm` for `no_std` support.
libm = ["bevy_math/nostd-libm", "glam/nostd-libm"]

# Enable support for the standard library
std = ["dep:arc-swap", "facet?/std", "froglight-common/std", "froglight-facet?/std", "froglight-player/std", "glam/std", "uuid/std"]
# Enable optimizations using the nightly toolchain
nightly = ["froglight-common/nightly", "froglight-facet?/nightly", "froglight-player/nightly"]

# -------------------------------------------------------------------------------------------------
# Note: The following features are automatically @generated.

v26_1 = ["froglight-common/v26_1"]
v26_2 = ["froglight-common/v26_2"]
