[package]
edition = { workspace = true }
homepage = { workspace = true }
include = { workspace = true }
license = { workspace = true }
name = "froglight-facet-iter"
readme = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

# --- Dependencies ---

[dependencies]
facet = { features = ["alloc", "reflect", "smallvec", "uuid"], workspace = true }
facet-path = { features = ["alloc"], workspace = true }
replace_with = { workspace = true }
smallvec = { features = ["const_generics", "const_new", "union"], workspace = true }

# Optional dependencies
ariadne = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }

# --- Features ---

[features]
default = ["std"]

# Enable support for error reports.
report = ["dep:ariadne", "std"]

# Enable `tracing` support.
tracing = ["dep:tracing"]
# Enable extended `tracing` support.
tracing_ext = ["tracing"]

# Enable support for the standard library
std = ["facet/std", "facet-path/std", "replace_with/std", "tracing?/std"]
# Enable optimizations using the nightly toolchain
nightly = ["replace_with/nightly", "smallvec/specialization"]
