[package]
edition = { workspace = true }
homepage = { workspace = true }
include = { workspace = true }
license = { workspace = true }
name = "froglight-facet"
readme = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

# --- Dependencies ---

[dev-dependencies]
criterion = { features = ["default", "html_reports"], workspace = true }
rand = { workspace = true }

[dependencies]
facet = { features = ["alloc", "reflect", "uuid"], workspace = true }
froglight-facet-iter = { workspace = true }
simdutf8 = { workspace = true }
uuid = { workspace = true }

# Optional dependencies
tracing = { workspace = true, optional = true }

[target.'cfg(target_arch = "aarch64")'.dependencies]
simdutf8 = { features = ["aarch64_neon"], workspace = true }

# --- Tests/Benchmarks ---

[[bench]]
name = "varint"
required-features = ["simd", "std"]
harness = false

[[test]]
name = "simd_arch"
required-features = ["simd", "std"]

[[test]]
name = "simd_fallback"
required-features = ["simd", "std"]

# --- Features ---

[features]
default = ["std"]

# Enable support for error reports.
report = ["froglight-facet-iter/report", "std"]
# Enable support for SIMD optimizations.
simd = ["nightly"]
# Force the use of the generic fallback SIMD implementation.
# This is typically used for testing and debugging.
simd_fallback = ["simd"]

# Enable `tracing` support.
tracing = ["dep:tracing", "froglight-facet-iter/tracing"]
# Enable extended `tracing` support.
tracing_ext = ["tracing", "froglight-facet-iter/tracing_ext"]

# Enable support for the standard library
std = ["facet/std", "froglight-facet-iter/std", "simdutf8/std", "tracing?/std", "uuid/std"]
# Enable optimizations using the nightly toolchain
nightly = ["froglight-facet-iter/nightly", "simdutf8/aarch64_neon_prefetch"]
