[package]
edition = { workspace = true }
homepage = { workspace = true }
include = { workspace = true }
license = { workspace = true }
name = "froglight-instance"
readme = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

# --- Dependencies ---

[dependencies]
bevy_app = { features = ["bevy_reflect"], workspace = true }
bevy_ecs = { features = ["bevy_reflect"], workspace = true }
bevy_reflect = { features = ["hashbrown"], workspace = true }
foldhash = { workspace = true }
froglight-biome = { features = ["alloc"], workspace = true }
froglight-block = { features = ["alloc"], workspace = true }
froglight-common = { features = ["alloc", "bevy"], workspace = true }
froglight-entity = { features = ["bevy"], workspace = true }
froglight-world = { features = ["alloc", "bevy", "froglight-biome", "froglight-block"], workspace = true }
hashbrown = { features = ["alloc", "core", "default-hasher"], workspace = true }

# Optional dependencies
tracing = { workspace = true, optional = true }

# --- Features ---

[features]
default = ["std"]

# Enable `tracing` support.
tracing = ["dep:tracing", "froglight-biome/tracing", "froglight-block/tracing", "froglight-common/tracing", "froglight-entity/tracing", "froglight-world/tracing"]

# Enable support for the standard library
std = ["bevy_app/std", "bevy_ecs/std", "bevy_reflect/std", "foldhash/std", "froglight-biome/std", "froglight-block/std", "froglight-common/std", "froglight-entity/std", "froglight-world/std", "tracing?/std"]
# Enable optimizations using the nightly toolchain
nightly = ["foldhash/nightly", "froglight-biome/nightly", "froglight-block/nightly", "froglight-common/nightly", "froglight-entity/nightly", "froglight-world/nightly", "hashbrown/nightly"]
