[package]
edition = { workspace = true }
homepage = { workspace = true }
include = { workspace = true }
license = { workspace = true }
name = "froglight-instance"
readme = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

# --- Dependencies ---

[dependencies]
bevy_app = { features = ["bevy_reflect"], workspace = true }
bevy_ecs = { features = ["bevy_reflect"], workspace = true }
bevy_reflect = { features = ["hashbrown"], workspace = true }
foldhash = { workspace = true }
froglight-biome = { workspace = true }
froglight-block = { workspace = true }
froglight-common = { features = ["bevy"], workspace = true }
froglight-entity = { features = ["bevy"], workspace = true }
froglight-item = { features = ["froglight-block"], workspace = true }
froglight-world = { features = ["bevy", "froglight-biome", "froglight-block"], workspace = true }
hashbrown = { features = ["alloc", "core", "default-hasher"], workspace = true }

# Optional dependencies
tracing = { workspace = true, optional = true }

# --- Features ---

[features]
default = ["std"]

# Enable `tracing` support.
tracing = ["dep:tracing", "froglight-entity/tracing"]

# Enable support for the standard library
std = ["bevy_app/std", "bevy_ecs/std", "bevy_reflect/std", "foldhash/std", "froglight-biome/std", "froglight-block/std", "froglight-common/std", "froglight-entity/std", "froglight-item/std", "froglight-world/std", "tracing?/std"]
# Enable optimizations using the nightly toolchain
nightly = ["foldhash/nightly", "froglight-biome/nightly", "froglight-block/nightly", "froglight-common/nightly", "froglight-entity/nightly", "froglight-item/nightly", "froglight-world/nightly", "hashbrown/nightly"]
