[package]
edition = { workspace = true }
homepage = { workspace = true }
include = { workspace = true }
license = { workspace = true }
name = "froglight-internal"
readme = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

# --- Dependencies ---

[dependencies]
froglight-block = { workspace = true }
froglight-common = { workspace = true }
froglight-registry = { workspace = true }
froglight-world = { features = ["froglight-block"], workspace = true }

# Optional dependencies

# --- Features ---

[features]
default = ["std"]

# Enable `bevy` support.
bevy = ["froglight-common/bevy", "froglight-world/bevy"]
# Enable `tracing` support.
tracing = ["froglight-block/tracing", "froglight-world/tracing"]

# Enable `libm` for `no_std` support.
libm = ["froglight-block/libm", "froglight-world/libm"]
# Enable `parking_lot` for `no_std` support.
parking_lot = ["froglight-block/parking_lot", "froglight-registry/parking_lot", "froglight-world/parking_lot"]

# Enable support for the standard library
std = ["froglight-block/std", "froglight-common/std", "froglight-registry/std", "froglight-world/std"]
# Enable optimizations using the nightly toolchain
nightly = ["froglight-block/nightly", "froglight-common/nightly", "froglight-registry/nightly", "froglight-world/nightly"]
