[package]
edition = { workspace = true }
homepage = { workspace = true }
include = { workspace = true }
license = { workspace = true }
name = "froglight-internal"
readme = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

# --- Dependencies ---

[dependencies]
froglight-biome = { features = ["attribute"], workspace = true }
froglight-block = { workspace = true }
froglight-common = { workspace = true }
froglight-registry = { workspace = true }
froglight-inventory = { workspace = true }
froglight-item = { features = ["froglight-block"], workspace = true }
froglight-math = { workspace = true }
froglight-packet = { workspace = true }
froglight-world = { features = ["froglight-biome", "froglight-block"], workspace = true }

# Optional dependencies
bevy_app = { workspace = true, optional = true }
froglight-api = { features = ["resolver", "ureq"], workspace = true, optional = true }
froglight-network = { features = ["futures-lite"], workspace = true, optional = true }

# --- Features ---

[features]
default = ["network", "std"]

# Enable `bevy` support.
bevy = ["dep:bevy_app", "froglight-api?/bevy", "froglight-common/bevy", "froglight-inventory/bevy", "froglight-math/bevy", "froglight-network?/bevy", "froglight-packet/bevy", "froglight-world/bevy"]
# Enable networking support.
network = ["dep:froglight-api", "dep:froglight-network", "std"]
# Enable `tracing` support.
tracing = ["froglight-api?/tracing", "froglight-biome/tracing", "froglight-block/tracing", "froglight-common/tracing", "froglight-inventory/tracing", "froglight-item/tracing", "froglight-network?/tracing", "froglight-registry/tracing", "froglight-world/tracing"]

# Enable `libm` for `no_std` support.
libm = ["froglight-block/libm", "froglight-math/libm", "froglight-world/libm"]
# Enable `once_cell` for `no_std` support.
once_cell = ["froglight-inventory/once_cell", "froglight-math/once_cell"]
# Enable `parking_lot` for `no_std` support.
parking_lot = ["froglight-biome/parking_lot", "froglight-block/parking_lot", "froglight-item/parking_lot", "froglight-registry/parking_lot", "froglight-world/parking_lot"]

# Enable support for the standard library
std = ["froglight-biome/std", "froglight-block/std", "froglight-common/std", "froglight-inventory/std", "froglight-item/std", "froglight-math/std", "froglight-packet/std", "froglight-registry/std", "froglight-world/std"]
# Enable optimizations using the nightly toolchain
nightly = ["froglight-api?/nightly", "froglight-biome/nightly", "froglight-block/nightly", "froglight-common/nightly", "froglight-inventory/nightly", "froglight-item/nightly", "froglight-math/nightly", "froglight-network?/nightly", "froglight-packet/nightly", "froglight-registry/nightly", "froglight-world/nightly", "std"]

# -------------------------------------------------------------------------------------------------
# Note: The following features are automatically @generated.

v26_1 = ["froglight-biome/v26_1", "froglight-block/v26_1", "froglight-item/v26_1", "froglight-network?/v26_1", "froglight-packet/v26_1", "froglight-registry/v26_1"]
