[package]
edition = { workspace = true }
homepage = { workspace = true }
include = { workspace = true }
license = { workspace = true }
name = "froglight-inventory"
readme = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

# --- Dependencies ---

[dependencies]
foldhash = { workspace = true }
froglight-common = { workspace = true }
froglight-item = { workspace = true }
indexmap = { workspace = true }

# Optional dependencies
bevy_app = { features = ["bevy_reflect"], workspace = true, optional = true }
bevy_ecs = { features = ["bevy_reflect"], workspace = true, optional = true }
bevy_reflect = { features = ["indexmap"], workspace = true, optional = true }
facet = { workspace = true, optional = true }
froglight-facet = { workspace = true, optional = true }
once_cell = { features = ["alloc", "critical-section"], workspace = true, optional = true }
tracing = { workspace = true, optional = true }

# --- Features ---

[features]
default = ["std"]

# Enable `bevy` support.
bevy = ["dep:bevy_app", "dep:bevy_ecs", "dep:bevy_reflect", "froglight-common/bevy"]
# Enable `facet` support.
facet = ["dep:facet", "froglight-common/facet", "dep:froglight-facet"]
# Enable `once_cell` for `no_std` support.
once_cell = ["dep:once_cell"]
# Enable `tracing` support.
tracing = ["dep:tracing"]
# Enable extended `tracing` support.
tracing_ext = ["froglight-facet?/tracing", "tracing"]

# Enable support for the standard library
std = ["bevy_app?/std", "bevy_ecs?/std", "bevy_reflect?/std", "facet?/std", "foldhash/std", "froglight-common/std", "froglight-facet?/std", "froglight-item/std", "indexmap/std"]
# Enable optimizations using the nightly toolchain
nightly = ["foldhash/nightly", "froglight-common/nightly", "froglight-facet?/nightly", "froglight-item/nightly"]

# -------------------------------------------------------------------------------------------------
# Note: The following features are automatically @generated.

v26_1 = ["froglight-common/v26_1", "froglight-item/v26_1"]
v26_2 = ["froglight-common/v26_2", "froglight-item/v26_2"]
