[package]
edition = { workspace = true }
homepage = { workspace = true }
include = { workspace = true }
license = { workspace = true }
name = "froglight-item"
readme = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

# --- Dependencies ---

[dependencies]
foldhash = { workspace = true }
froglight-common = { workspace = true }
froglight-registry-template = { workspace = true }
indexmap = { workspace = true }
variadics_please = { workspace = true }

# Optional dependencies
froglight-block = { workspace = true, optional = true }

# --- Features ---

[features]
default = ["std"]

# Enable `froglight-block` support.
froglight-block = ["dep:froglight-block"]

# Enable `libm` for `no_std` support.
libm = ["froglight-block?/libm"]
# Enable `once_cell` for `no_std` support.
once_cell = ["froglight-registry-template/once_cell"]

# Enable support for the standard library
std = ["foldhash/std", "froglight-block?/std", "froglight-common/std", "froglight-registry-template/std", "indexmap/std"]
# Enable optimizations using the nightly toolchain
nightly = ["foldhash/nightly", "froglight-block?/nightly", "froglight-common/nightly", "froglight-registry-template/nightly"]

# -------------------------------------------------------------------------------------------------
# Note: The following features are automatically @generated.

v26_1 = ["froglight-common/v26_1"]
v26_2 = ["froglight-common/v26_2"]
