[package]
edition = { workspace = true }
homepage = { workspace = true }
include = { workspace = true }
license = { workspace = true }
name = "froglight-mutf8"
readme = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

# --- Dependencies ---

[dev-dependencies]
cesu8 = { version = "1.1" }
criterion = { features = ["default", "html_reports"], workspace = true }
pretty_assertions = { workspace = true }
rand = { workspace = true }
simd_cesu8 = { features = ["default", "nightly"], version = "1.1" }

[dependencies]
simdutf8 = { workspace = true }

# Optional dependencies
facet = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }

[target.'cfg(target_arch = "aarch64")'.dependencies]
simdutf8 = { features = ["aarch64_neon"], workspace = true }

# --- Tests/Benchmarks ---

[[test]]
name = "static_mutf8"

[[test]]
name = "verify_cesu8"
required-features = ["std"]

[[test]]
name = "verify_simd_cesu8"
required-features = ["std", "simd", "nightly"]

# --- Features ---

[features]
default = ["std"]

# Enable `facet` support.
facet = ["alloc", "dep:facet"]
# Enable support for SIMD optimizations.
simd = ["nightly"]

# Enable `tracing` support.
tracing = ["dep:tracing"]

# Enable support for a global allocator
alloc = ["facet?/alloc"]
# Enable support for the standard library
std = ["alloc", "facet?/std", "simdutf8/std", "tracing?/std"]
# Enable optimizations using the nightly toolchain
nightly = ["simdutf8/aarch64_neon_prefetch"]
